[metadata]
name = autopipes
author = Leif Van Holland
version = 0.0.3
url = https://github.com/leifvan/autopipes
description = A tool to automatically generate simple multiprocessing pipelines in Python.
;long_description = file: README.md
;long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = autopipes
install_requires =
    numpy
